dev/1-gateway/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: polom-gateway
  namespace: default
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/cert-manager-certs: polom-dev-cert-2
  addresses:
  - type: NamedAddress
    value: gateway-static-ip
  allowedRoutes:
    kinds:
      - kind: HTTPRoute
    namespaces:
      from: All

---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http-to-https-redirect
  namespace: default
spec:
  parentRefs:
    - name: polom-gateway
      namespace: default
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: HTTPS
            statusCode: 301
